# iglo

./: CMakeLists.txt  build.cmd
docs/: CHANGELOG.md  CONTRIBUTING.md  DESIGN-DECISIONS.md  README.md  TODO.txt
examples/camera-and-skybox/: CameraAndSkybox.cpp  DemoCamera.cpp  DemoCamera.h  LoadingScreenProgressBar.cpp  LoadingScreenProgressBar.h
examples/camera-and-skybox/resources/: cubemap.dds
examples/camera-and-skybox/shaders/: InstancingShader.hlsl  PS_InstancingShader.cso  PS_RegularShader.cso  PS_SkyboxShader.cso  PS_SkyboxShader_SPIRV.cso  RegularShader.hlsl  SkyboxShader.hlsl  VS_InstancingShader.cso  VS_InstancingShader_SPIRV.cso  VS_RegularShader.cso  VS_RegularShader_SPIRV.cso  VS_SkyboxShader.cso  VS_SkyboxShader_SPIRV.cso  compile shaders.cmd
examples/hello-batchrenderer/: AdvDrawStringFuncs.cpp  AdvDrawStringFuncs.h  HelloBatchRenderer.cpp
examples/hello-batchrenderer/shaders/: InstancedRect.hlsl  InstancedSprite.hlsl  PixelColor.hlsl  PixelTexture.hlsl  ScaledSpritesWithFloatColor.hlsl  VertexPulledRect.hlsl  VertexPulledSprite.hlsl  Wobble.hlsl  compile shaders.cmd  compile-shaders.cmd
examples/hello-batchrenderer/shaders/compiled/: PS_Color.h  PS_Texture.h  PS_Texture_SPIRV.h  PS_Wobble.h  PS_Wobble_SPIRV.h  VS_InstancedRect.h  VS_InstancedRect_SPIRV.h  VS_InstancedSprite.h  VS_InstancedSprite_SPIRV.h  VS_RawRect.h  VS_RawRect_SPIRV.h  VS_RawSprite.h  VS_RawSprite_SPIRV.h  VS_ScaledSpriteFloatColor.h  VS_StructuredRect.h  VS_StructuredRect_SPIRV.h  VS_StructuredSprite.h  VS_StructuredSprite_SPIRV.h
examples/hello-cube/: HelloCube.cpp
examples/hello-cube/shaders/: HelloCube.hlsl  PS_HelloCube.cso  PS_HelloCube_SPIRV.cso  VS_HelloCube.cso  VS_HelloCube_SPIRV.cso  compile shaders.cmd
examples/hello-world/: HelloWorld.cpp
examples/lighting-and-shadows/: LightingAndShadows.cpp  StencilTextureView.cpp  StencilTextureView.h
examples/lighting-and-shadows/shaders/: LightingAndShadows.hlsl  PS_LightingAndShadows.cso  PS_LightingAndShadows_SPIRV.cso  VS_Depth.cso  VS_Depth_SPIRV.cso  VS_LightingAndShadows.cso  VS_LightingAndShadows_SPIRV.cso  compile shaders.cmd
shaders/: compile-shaders.cmd
shaders/common/: BatchRendererCommon.hlsl
shaders/cs/: CS_GenerateMipmaps.hlsl  CS_GenerateMips_NonPow2.hlsl  CS_GenerateMips_Pow2.hlsl
shaders/ps/: PS_CUV.hlsl  PS_CUV_DepthBuffer.hlsl  PS_CUV_MonoOpaque.hlsl  PS_CUV_MonoTransparent.hlsl  PS_CUV_SDF.hlsl  PS_FullscreenQuad.hlsl  PS_InstancedCircle.hlsl
shaders/vs/: VS_FullscreenQuad.hlsl  VS_InstancedCircle.hlsl  VS_InstancedRect.hlsl  VS_InstancedScaledSprite.hlsl  VS_InstancedSprite.hlsl  VS_InstancedTransformedSprite.hlsl  VS_StructuredCircle.hlsl  VS_StructuredRect.hlsl  VS_StructuredScaledSprite.hlsl  VS_StructuredSprite.hlsl  VS_StructuredTransformedSprite.hlsl  VS_XYC.hlsl  VS_XYCUV.hlsl
src/: iglo.cpp  iglo.h  igloMainLoop.cpp  igloMainLoop.h  igloUtility.cpp  igloUtility.h  iglo_batch_renderer.cpp  iglo_batch_renderer.h  iglo_batchrenderer.cpp  iglo_config.h  iglo_font.cpp  iglo_font.h  iglo_main_loop.cpp  iglo_main_loop.h  iglo_mainloop.cpp  iglo_screen_renderer.cpp  iglo_utility.cpp  iglo_utility.h
src/backends/: iglo_impl_d3d12.cpp  iglo_impl_d3d12.h  iglo_impl_vulkan.cpp  iglo_impl_vulkan.h  iglo_impl_win32.cpp  iglo_impl_win32.h  iglo_impl_x11.cpp  iglo_impl_x11.h
src/shaders/: CS_GenerateMipmaps.h  CS_GenerateMips_NonPow2.h  CS_GenerateMips_Pow2.h
